Fixed meal image responsiveness on small screens

--- a/style.css
+++ b/style.css
@@ -278,7 +278,8 @@ a {
 /* MEAL DETAILS */
 .meal-details {
     padding: 30px;
-    background: #f9f9f9;
+    background: #ffffff;
+    align-items: center;
 }
 
 .meal-top {
@@ -296,7 +297,7 @@ a {
 
 
 .meal-image img {
-    width: 50%;
+    width: 70%;
     height: auto;
     border-radius: 15px;
     display: block;
@@ -468,7 +469,8 @@ a {
 
     .meal-image {
         /* align-items: center; */
-        margin-left: 30%;
+        /* margin-left: 30%; */
+
     }
 
 
@@ -518,12 +520,9 @@ a {
 }
 
 @media (max-width: 320px) {
-    .meal-image {
-        /* align-items: center; */
-        margin-left: 20%;
-    }
 
 
+  
 
 
 
